--- a/Angular_Customer_Database/src/index.html
+++ b/Angular_Customer_Database/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularFinalExam</title>
+  <title>Angular_Customer_Database</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
