--- a/JS_Score_Tracker/index.html
+++ b/JS_Score_Tracker/index.html
@@ -67,7 +67,7 @@
               <div class="modal-content">
                 <div class="notification is-primary p-6 has-text-centered">
                   <button class="delete" id="delete"></button>
-                  <span id="winModalMessage" class="is-size-2	">TEST CONTENT</span> 
+                  <span id="winModalMessage" class="is-size-2	"></span> 
                 </div>
               </div>
               <button class="modal-close is-large" aria-label="close"></button>
